# apt-ostree-test

./: .coveragerc  .gitreview  .stestr.conf  .yamllint  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
apt_ostree/: __init__.py  bootstrap.py  constants.py  deploy.py  log.py  ostree.py  platform.py  repo.py  utils.py
apt_ostree/cmd/: __init__.py  options.py  shell.py  version.py
apt_ostree/cmd/compose/: __init__.py  create.py  deploy.py  image.py  run.py
apt_ostree/cmd/repo/: __init__.py  add.py  init.py  list.py  remove.py
apt_ostree/tests/: test_apt_ostree.py  test_cli.py
apt_ostree/tests/compose/: test_create.py
apt_ostree/tests/repo/: test_repo_cli.py
config/debian/bookworm/: bootstrap.yaml
config/debian/bookworm/image/: image.yaml
config/debian/bullseye/: bootstrap.yaml
config/starlingx/: README.rst  bootstrap.yaml
config/starlingx/overlay/debian/etc/: hosts
debian/: changelog  control
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: configuration.rst  index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
docker/: Dockerfile
releasenotes/source/: conf.py  index.rst
tools/: kill-vm.sh  run-vm.sh
(+2 files in other folders)
